--- a/DSA/Arrays/2.Second_Largest.md
+++ b/DSA/Arrays/2.Second_Largest.md
@@ -1,9 +1,9 @@
-Question:  
+**Question**:  
 Given an array of positive integers arr[], return the second largest element from the array. If the second largest element doesn't exist then return -1.  
 
-Solutions:  
+**Solutions**:  
 
-Brute Force:  
+**Brute Force**:  
 1.Sort the Array  
 2.Find the second Largest from the right side  
 
@@ -24,7 +24,7 @@ Brute Force:
 Time Complexity: O(NlogN)+O(N)  
 Space Complexity: O(1)  
 
-Better Solution:  
+**Better Solution**:  
 1.Find the Maximum Element   
 2.Find the Second Max Element  
 
@@ -45,7 +45,7 @@ Better Solution:
 Time Complexity: O(N)+O(N)  
 Space Complexity: O(1)
 
-Optimal Solution:
+**Optimal Solution**:  
 1.Find the minimum and the maximum element in one iteration  
 
     public int getSecondLargest(int[] arr) {
