--- a/DSA/Arrays/2.Second_Largest.md
+++ b/DSA/Arrays/2.Second_Largest.md
@@ -1,4 +1,5 @@
-**Question**:  
+**Question**:
+<span style="color:red">Question</span>
 Given an array of positive integers arr[], return the second largest element from the array. If the second largest element doesn't exist then return -1.  
 
 **Solutions**:  
