Binary Search Day3

--- a/DSA/Binary_Search/2.Lower_Bound.md
+++ b/DSA/Binary_Search/2.Lower_Bound.md
@@ -6,7 +6,7 @@ Given a sorted array arr[] and an integer x, find the index (0-based) of the lar
 
 **Optimal Solution**:  
 1.Using Binary Search just add some simple logic  
-2.if arr[mid] less than x take ans as mid and proccced the binary search.. 
+2.if arr[mid] less than or equal to x take ans as mid and proccced the binary search.. 
 
     static int findFloor(int[] arr, int x) {
         // write code here
