Strings Basic problems complete

--- a/DSA/Strings/5.Isomorphics.md
+++ b/DSA/Strings/5.Isomorphics.md
@@ -1,6 +1,6 @@
 **Question**:  
-Write a function to find the longest common prefix string amongst an array of strings.
-If there is no common prefix, return an empty string "".    
+Given two strings s and t, determine if they are isomorphic.
+Two strings s and t are isomorphic if the characters in s can be replaced to get t.    
 
 **Solutions**:   
 
